# ThumP

./: .gitignore  README.md  index.html  make_data.py  merge_files.py  pyproject.toml  requirements.txt  stream_alerts.py  thump.sh
data/: schema.json
data/examples/: example00.json  example01.json  example02.json  example03.json  example04.json
gfx/: make_thumbnail.py
scripts/: thump.js  utils.js
scripts/base/: base.js
scripts/parsers/: mathparser.js
scripts/ui/: globalOptions.js  globalSelectors.js  io.js  mosaicGrid.js
src/thump/: __init__.py  make_examples.py  process_data.py
src/thump/commands/: __init__.py  concat_output.py  fink_from_datatransfer_lsst.py  fink_stream_alerts_lsst.py  mag2absmag.py  make_examples.py  remove_inspected.py
src/thump/data/: __init__.py  examples.py  output.py
src/thump/fink_lsst/: __init__.py  process_data.py
style/: thump.css
