[project]
name = "thump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "lukas.steinwender99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
]

[project.scripts]
thump = "thump:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fink-client>=9.2",
]
