[project]
name = "thump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "lukas.steinwender99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
]

[project.scripts]
thump_make_examples = "thump.commands:make_examples.main"
thump_concat_output = "thump.commands:concat_output.main"
thump_from_fink_datatransfer = "thump.commands:fink_from_datatransfer_lsst.main"
thump_fink_stream_lsst = "thump.commands:fink_stream_alerts_lsst.main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fink-client>=9.2",
    "memory-profiler>=0.61.0",
]
