[project]
name = "thump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "lukas.steinwender99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "kaleido>=1.2.0",
    "lust-codesnippets-py",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
]

[project.scripts]
thump_concat_output = "thump.commands:concat_output.main"
thump_mag2absmag = "thump.commands:mag2absmag.main"
thump_from_fink_datatransfer = "thump.commands:fink_from_datatransfer_lsst.main"
thump_fink_stream_lsst = "thump.commands:fink_stream_alerts_lsst.main"
thump_make_examples = "thump.commands:make_examples.main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fink-client>=10.0",
    "fink-broker>=4.1",
    "memory-profiler>=0.61.0",
]

[tool.uv.sources]
lust-codesnippets-py = { git = "https://github.com/TheRedElement/LuStCodeSnippets.git", rev = "dev" }
fink-broker = { git = "https://github.com/astrolabsoftware/fink-broker.git" }
